# xaiops

./: .env  .gitignore  README.md  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/app/: a2a_agent_executor.py  a2a_ops_server.py  a2a_orchestrator.py  graph.py  llamastack_a2a_agent.py  llm_config.py  main.py  state.py
src/app/agents/: specialists.py  subgraphs.py  supervisor.py
src/app/agents/specialists/: __init__.py  graph_agent.py  vector_agent.py
src/app/graphs/: a2a_orchestrator_subgraph.py  domain_subgraphs.py  rca_subgraph.py  supervisor.py
src/app/prompts/: __init__.py  compliance_domain.md  graph_collector.md  learning_domain.md  performance_domain.md  rca_domain.md  security_domain.md  vector_collector.md
src/app/tools/: agent_tools.py  data_tools.py  hitl_tools.py  neo4j_client.py  rca_tools.py  vector_search.py
src/xaiops_graphrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tutorial/xaiops/: 01-langgraph-concepts.md  02-xaiops-architecture.md  03-subgraph-patterns.md  04-agent-lifecycle.md  05-rag-patterns.md  06-contribution-guide.md  README.md  quick-reference.md
